--- a/Website1/index.html
+++ b/Website1/index.html
@@ -5,13 +5,13 @@
         <title>5 Things to Know About Rattlesnakes and Their Babies</title>
     </head>
     <header>
-        <img src="UniversityLogo.png" alt="University of Arizona Logo">   
+        <img src="UniversityLogo.png" alt="Logo of The University of Arizona">   
         <h1>5 Things to Know About Rattlesnakes and Their Babies</h1>
         <p>UA College of Pharmacy | Aug. 6, 2014</p>
     </header>
     <body>
         <p>Arguably, snake season is year-round in Arizona, a state known for its rattlers. But baby rattlesnakes are born in July and August, making these two months especially dangerous for hikers, gardeners, children and others at high risk of exposure to rattlesnake bites.</p>
-        <img src="SnakeBite.jpg" alt="Snake bite on side of child's foot.">
+        <img src="SnakeBite.jpg" alt="Snake bite on side of child's foot">
 
         <p>So far this year, 74 rattlesnake bites to humans have been reported to the Arizona Poison and Drug Information Center. Based at the University of Arizona College of Pharmacy, the center serves the entire state of Arizona with the exception of Maricopa County, providing free and confidential poison and medication information to callers around the clock.</p>
 
